[CSS] fixed article images not covering containing box

--- a/src/App.css
+++ b/src/App.css
@@ -46,5 +46,7 @@ body {
 }
 
 .image {
-	max-width: 100%;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
